--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+     <center><img class="box-image" src="./My Photo(1).jpg "></center>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
@@ -44,12 +45,17 @@
             <h1>Student Registration Form</h1>
             <p>I completed a Student Registration Form using HTML and Css</p>
         </li>
+        <li>
+            <h1>Reestar-A  Recipe Website and interactive contact form</h1>
+            <p>I completed a Reestar website using HTML and CSS</p>
+        </li>
     </ul>
 </div>
 <div class="section-five">
     <p class="section-five__Title">Social Media:
-        <a href="https://www.instagram.com/d.vigneshkumar88">Instagram</a>
-        <a href="http://www.linkedin.com/in/d-vignesh-kumar-449809248">Linkedin</a>
+        <a href="https://www.instagram.com/d.vigneshkumar88">Instagram</a>,
+        <a href="http://www.linkedin.com/in/d-vignesh-kumar-449809248">Linkedin</a>,
+        <a href="http://www.youtube.com/@d.vigneshkumar2172">YouTube</a>
     </p>
     <p class="section-five__Description">Vignesh Kumar &copy;</p>
 </div>
